--- a/dockerhomeserver-services-arm64-v1.yml
+++ b/dockerhomeserver-services-arm64-v1.yml
@@ -38,7 +38,7 @@ services:
       - WG_HOST=$WIREGUARD_HOST # wg server
       - PASSWORD=$WIREGUARD_UI_PASSWORD # UI password
       - WG_PERSISTENT_KEEPALIVE=$WIREGUARD_KEEPALIVE
-      - WG_DEFAULT_DNS=$WIREGUARD_DNS
+      - WG_DEFAULT_DNS=$DNS_RESOLVER
     volumes:
       - $SERVICES_DIR/wireguard_easy:/etc/wireguard
     cap_add:
