--- a/dockerhomeserver-services-arm64-v0.yml
+++ b/dockerhomeserver-services-arm64-v0.yml
@@ -26,7 +26,7 @@ services:
   transmission_openvpn:
     image: haugene/transmission-openvpn:3.0.2-armhf #latest-armhf / 2.13-armhf / 3.0.2-armhf
     container_name: transmission_openvpn
-    restart: always # If not always, disable WEBPROXY_ENABLED
+    restart: unless-stopped # If not always, disable WEBPROXY_ENABLED
     cap_add:
       - NET_ADMIN
     dns:
