Updated baserow and n8n containers with smtp config

--- a/dockerhomeserver-baserow-arm64-v0.yml
+++ b/dockerhomeserver-baserow-arm64-v0.yml
@@ -2,7 +2,7 @@
 
 services:
   baserow:
-    image: baserow/baserow:latest
+    image: baserow/baserow:$BASEROW_VERSION
     container_name: baserow
     restart: always
     security_opt:
@@ -11,18 +11,22 @@ services:
       baserow_db:
         condition: service_healthy
     environment:
-      TZ=$TZ
+      TZ: $TZ
       BASEROW_PUBLIC_URL: $BASEROW_DOMAIN_URL
+      # Database
       DATABASE_HOST: $BASEROW_DATABASE_SERVER_HOST
       DATABASE_PORT: $BASEROW_POSTGRESDB_PORT
       DATABASE_NAME: $BASEROW_DATABASE_NAME
       DATABASE_USER: $BASEROW_DATABASE_USER
       DATABASE_PASSWORD: $BASEROW_DATABASE_PASSWORD
-      #EMAIL_SMTP: $BASEROW_EMAIL_SMTP
-      #EMAIL_SMTP_HOST: $BASEROW_EMAIL_SMTP_HOST
-      #EMAIL_SMTP_PASSWORD: $BASEROW_EMAIL_SMTP_PASSWORD
-      #FROM_EMAIL: $BASEROW_FROM_EMAIL
-      #EMAIL_SMTP_USE_TLS: $BASEROW_EMAIL_SMTP_USE_TLS
+      # SMTP Email
+      EMAIL_SMTP: $BASEROW_EMAIL_SMTP
+      FROM_EMAIL: $BASEROW_FROM_EMAIL
+      EMAIL_SMTP_HOST: $BASEROW_EMAIL_SMTP_HOST
+      EMAIL_SMTP_USER: $BASEROW_EMAIL_SMTP_USER
+      EMAIL_SMTP_PASSWORD: $BASEROW_EMAIL_SMTP_PASSWORD
+      EMAIL_SMTP_USE_SSL: $BASEROW_EMAIL_SMTP_USE_SSL
+      EMAIL_SMTP_PORT: $BASEROW_EMAIL_SMTP_PORT
     ports:
       - $BASEROW_FRONTEND_PORT:80
       - $BASEROW_FRONTEND_SSL_PORT:443
