--- a/dockerhomeserver-n8n-arm64-v0.yml
+++ b/dockerhomeserver-n8n-arm64-v0.yml
@@ -29,12 +29,27 @@ services:
       - N8N_HOST=$N8N_HOST
       - N8N_PROTOCOL=$N8N_PROTOCOL
       # Endpoints
+      - N8N_PAYLOAD_SIZE_MAX=$N8N_PAYLOAD_SIZE_MAX
       #- N8N_ENDPOINT_REST=
       - WEBHOOK_URL=$N8N_WEBHOOK_URL
+      # Executions
+      - EXECUTIONS_MODE=$EXECUTIONS_MODE
+      - EXECUTIONS_TIMEOUT=$EXECUTIONS_TIMEOUT
+      - EXECUTIONS_TIMEOUT_MAX=$EXECUTIONS_TIMEOUT_MAX
+      - N8N_CONCURRENCY_PRODUCTION_LIMIT=$N8N_CONCURRENCY_PRODUCTION_LIMIT
       # Security
       - N8N_SECURE_COOKIE=$N8N_SECURE_COOKIE
       # Timezone and localization
       - GENERIC_TIMEZONE=$TZ
+      - N8N_DEFAULT_LOCALE=$N8N_DEFAULT_LOCALE
+      # User Management and 2FA
+      - N8N_EMAIL_MODE=$N8N_EMAIL_MODE
+      - N8N_SMTP_HOST=$N8N_SMTP_HOST
+      - N8N_SMTP_SSL=$N8N_SMTP_SSL
+      - N8N_SMTP_PORT=$N8N_SMTP_PORT
+      - N8N_SMTP_USER=$N8N_SMTP_USER
+      - N8N_SMTP_PASS=$N8N_SMTP_PASS
+      - N8N_SMTP_SENDER=$N8N_SMTP_SENDER
     volumes:
       - $SERVICES_DIR/n8n/app:/home/node/.n8n
       - $SERVICES_DIR/n8n/files:/files
